bugfix(errors): make sure to handle errors properly, and exclude node_modules from globs

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "bin": {
     "gherkinizer": "bin/gherkinizer"
   },
-  "scripts": {
-  
-  },
+  "scripts": {},
   "author": "Jonathan Cammisuli <jon@cammisuli.ca>",
   "license": "ISC",
   "devDependencies": {
