refactor(templates): Switch to use mustache and beautify the  parsed template
docs(JSdoc): add docs to the index.ts file.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/glob": "^5.0.33",
-    "@types/handlebars": "^4.0.36",
+    "@types/js-beautify": "0.0.31",
+    "@types/mustache": "^0.8.30",
     "@types/node": "^8.0.46",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
@@ -19,6 +20,7 @@
   "dependencies": {
     "gherkin": "^5.0.0",
     "glob": "^7.1.2",
-    "handlebars": "^4.0.11"
+    "js-beautify": "^1.7.4",
+    "mustache": "^2.3.0"
   }
 }
