--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typescript": "^2.5.3"
   },
   "dependencies": {
+    "@types/handlebars": "^4.0.36",
     "gherkin": "^5.0.0",
     "glob": "^7.1.2",
+    "handlebars": "^4.0.11",
     "js-beautify": "^1.7.4",
     "mustache": "^2.3.0"
   }
