refactor: Include fs-extra for better promise handling of fs operations.
Also create new methods for creating spec or step files.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,10 +24,9 @@
             "name": "Launch Steps creation",
             "program": "${workspaceFolder}/src/index.ts",
             "args": [
-                "sample/**/myFeature.feature",
-                "sample/steps.js", 
-                "sample/steps",
-                "--steps"
+                "--steps",
+                "sample/**/commonScenarios.feature",
+                "sample/commonScenarioSteps"
             ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
