--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typescript": "^2.5.3"
   },
   "dependencies": {
+    "@types/fs-extra": "^4.0.3",
     "@types/handlebars": "^4.0.36",
     "@types/yargs": "^8.0.2",
+    "fs-extra": "^4.0.2",
     "gherkin": "^5.0.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.11",
