feature: allow creation of reusable scenarios

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,8 @@
             "args": [
                 "--steps",
                 "sample/**/commonScenarios.feature",
-                "sample/commonScenarioSteps"
+                "sample/steps.js", 
+                "sample/commonScenarioSteps/"
             ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
