--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "main": "lib/main.js",
+  "typings": "lib/main.d.ts",
   "bin": {
     "gherkinizer": "bin/gherkinizer"
   },
