--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
                 // "-w",
                 "sample/features/*.feature",
                 "sample/steps/**/*.js", 
-                "sample/specs/"
+                "sample/specs/",
+                "-v"
             ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
@@ -28,7 +29,8 @@
                 "--steps",
                 "sample/features/common/reusableScenarios.feature",
                 "sample/steps/steps.js", 
-                "sample/steps/"
+                "sample/steps/",
+                "-v"                
             ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
