fix: Make sure to not watch file changes when regenerating step files.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,8 +27,8 @@
             "program": "${workspaceFolder}/src/index.ts",
             "args": [
                 "--steps",
-                "sample/features/common/reusableScenarios.feature",
-                "sample/steps/steps.js", 
+                "sample/features/common/*.feature",
+                "sample/steps/*.js", 
                 "sample/steps/",
                 "-v",
                 "-w"              
