--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-beautify": "^1.7.4",
     "lodash": "^4.17.4",
     "mustache": "^2.3.0",
+    "proper-lockfile": "^2.0.1",
     "ts-md5": "^1.2.2",
     "yargs": "^10.0.3"
   }
